feat(incidents): muestra colaborador y fecha con hora en la bandeja
Agrega el nombre del colaborador (join a users en el read-side, como
el modulo reporting) y expone createdAt en el response de incidencias.
La tabla web reemplaza la fecha cruda por el timestamp formateado
yyyy-MM-dd HH:mm:ss y suma una columna Colaborador; el buscador tambien
filtra por nombre.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01WGbePL2MU3BnqXPgZhkMUD