@@ -2,6 +2,7 @@ package com.condor.nexussoft.timeclock.incidents.infrastructure.web;
 
 import com.condor.nexussoft.timeclock.incidents.domain.Incident;
 import com.condor.nexussoft.timeclock.incidents.domain.port.in.IncidentManagementUseCase;
+import com.condor.nexussoft.timeclock.incidents.infrastructure.persistence.IncidentUserNameQuery;
 import com.condor.nexussoft.timeclock.incidents.infrastructure.web.dto.IncidentDtos.*;
 import com.condor.nexussoft.timeclock.platform.tenant.TenantContext;
 import com.condor.nexussoft.timeclock.platform.web.PageResponse;
@@ -11,7 +12,10 @@ import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.List;
+import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 /** Gestión de incidencias (RF-09). Requiere {@code incident:approve}. */
 @RestController
@@ -20,9 +24,11 @@ import java.util.UUID;
 public class IncidentController {
 
     private final IncidentManagementUseCase incidents;
+    private final IncidentUserNameQuery userNames;
 
-    public IncidentController(IncidentManagementUseCase incidents) {
+    public IncidentController(IncidentManagementUseCase incidents, IncidentUserNameQuery userNames) {
         this.incidents = incidents;
+        this.userNames = userNames;
     }
 
     @GetMapping
@@ -30,16 +36,23 @@ public class IncidentController {
             @RequestParam(required = false) String status,
             @RequestParam(defaultValue = "0") int page,
             @RequestParam(defaultValue = "20") int size) {
-        Paged<Incident> result = incidents.list(TenantContext.require(), status, page, size);
-        return PageResponse.of(result.items().stream().map(IncidentResponse::from).toList(),
+        UUID tenantId = TenantContext.require();
+        Paged<Incident> result = incidents.list(tenantId, status, page, size);
+        List<UUID> userIds = result.items().stream().map(Incident::userId).distinct().toList();
+        Map<UUID, String> names = userNames.namesByUserId(tenantId, userIds);
+        return PageResponse.of(result.items().stream()
+                        .map(i -> IncidentResponse.from(i, names.get(i.userId())))
+                        .collect(Collectors.toList()),
                 result.page(), result.size(), result.total());
     }
 
     @PatchMapping("/{id}/resolve")
     public IncidentResponse resolve(@PathVariable UUID id, @Valid @RequestBody ResolveIncidentRequest request) {
-        Incident incident = incidents.resolve(TenantContext.require(), id,
+        UUID tenantId = TenantContext.require();
+        Incident incident = incidents.resolve(tenantId, id,
                 request.status(), request.note(), currentUserId());
-        return IncidentResponse.from(incident);
+        String userName = userNames.namesByUserId(tenantId, List.of(incident.userId())).get(incident.userId());
+        return IncidentResponse.from(incident, userName);
     }
 
     private UUID currentUserId() {
